--- a/industrialhygene.html
+++ b/industrialhygene.html
@@ -5,6 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Industrial Hygiene Services | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="ML Consultancy in Hyderabad, Telangana offers industrial hygiene services to maintain a healthy and safe workplace. Contact us for expert solutions." />
 <meta name="keywords" content="Industrial hygiene, workplace health, ML Consultancy, Hyderabad, Telangana, safety services, hygiene solutions" />
