--- a/ohsms.html
+++ b/ohsms.html
@@ -4,6 +4,8 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Occupational Health & Safety Management Systems | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="ML Consultancy in Hyderabad, Telangana offers Occupational Health and Safety Management Systems (OHSMS) to ensure workplace safety and compliance." />
 <meta name="keywords" content="OHSMS, Occupational Health and Safety, ML Consultancy, Hyderabad, Telangana, workplace safety, safety management systems" />
