--- a/powersystem.html
+++ b/powersystem.html
@@ -5,6 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Power System Safety Services | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Ensure the safety and reliability of your power systems with ML Consultancy in Hyderabad, Telangana. We offer expert power system safety services." />
 <meta name="keywords" content="Power system safety, power systems, ML Consultancy, Hyderabad, Telangana, safety services, electrical safety" />
