--- a/qms.html
+++ b/qms.html
@@ -4,6 +4,8 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Quality Management Systems | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Implement effective Quality Management Systems (QMS) with ML Consultancy in Hyderabad, Telangana to enhance business efficiency and compliance." />
 <meta name="keywords" content="Quality Management Systems, QMS, ML Consultancy, Hyderabad, Telangana, business efficiency, quality assurance" />
