--- a/safety.html
+++ b/safety.html
@@ -4,6 +4,8 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Comprehensive Safety Solutions | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="ML Consultancy in Hyderabad, Telangana offers comprehensive safety solutions to ensure workplace safety and regulatory compliance. Contact us for expert services." />
 <meta name="keywords" content="Safety solutions, workplace safety, ML Consultancy, Hyderabad, Telangana, safety services, regulatory compliance" />
