--- a/services.html
+++ b/services.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Our Services | ML Consultancy - Hyderabad, Telangana</title>
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Explore the range of services offered by ML Consultancy in Hyderabad, Telangana. We provide expert solutions in safety, management, and compliance." />
 <meta name="keywords" content="Services, ML Consultancy, Hyderabad, Telangana, safety solutions, management services, compliance" />
 
