--- a/services2.html
+++ b/services2.html
@@ -5,6 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Additional Services | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Discover additional services provided by ML Consultancy in Hyderabad, Telangana. We offer specialized solutions to meet your safety and management needs." />
 <meta name="keywords" content="Additional services, ML Consultancy, Hyderabad, Telangana, specialized solutions, safety, management" />
