--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,8 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Terms and Conditions | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Read the terms and conditions of using ML Consultancy's services in Hyderabad, Telangana. Ensure you understand our policies and guidelines." />
 <meta name="keywords" content="Terms and conditions, ML Consultancy, Hyderabad, Telangana, service policies, guidelines" />
