--- a/Blog.html
+++ b/Blog.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="Responsive, Digital Product">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="best fire safety system by ML Consultancy in Hyderabad,iso,isi certification,govt aprovel">
-    <meta name="keywords" content="ML Consultancy, Fire safety blog, Fire protection articles, Safety equipments,iso,isi certification">
-    <title>Blog - ML Consultancy Fire Safety Systems Hyderabad</title>
+	<meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us, Responsive, Digital Product">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
+    <title>ML Consultancy Fire Safety System Equipment mlcqehs</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
