--- a/Blog.html
+++ b/Blog.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us, Responsive, Digital Product">
+		 <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us, Responsive, Digital Product">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
     <title>ML Consultancy Fire Safety System Equipment mlcqehs</title>
