--- a/Blog.html
+++ b/Blog.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-
-		 <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us, Responsive, Digital Product">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
-    <title>ML Consultancy Fire Safety System Equipment mlcqehs</title>
+<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Specialized fire safety solutions for the pharmaceutical industry by ML Consultancy in Hyderabad, ensuring compliance and safety.">
+    <meta name="keywords" content="ML Consultancy, Pharmaceutical fire safety, Pharma safety systems, Fire protection in pharma, Hyderabad">
+    <title>Pharmaceutical Fire Safety Solutions - ML Consultancy Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
