--- a/incidentinvestigation.html
+++ b/incidentinvestigation.html
@@ -205,6 +205,12 @@ li{
         height: 170px; /* Adjust the height for mobile devices */
     }
 }
+	body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
 </style>
 	</head>
 
