--- a/Pharma.html
+++ b/Pharma.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Responsive, Digital Product">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Specialized fire safety solutions for the pharmaceutical industry by ML Consultancy in Hyderabad, ensuring compliance and safety.">
-    <meta name="keywords" content="ML Consultancy, Pharmaceutical fire safety, Pharma safety systems, Fire protection in pharma, Hyderabad">
+    <meta name="keywords" content="Fire Protection Systems, Best Pharmaceutical fire safety, Pharma safety systems, Fire protection in pharma,qehs">
     <title>Best Pharmaceutical Fire Safety Solutions -Best fire safety system in hyderabad </title>				
 		<!-- FAVICON AND TOUCH ICONS -->
 		
