--- a/contact.html
+++ b/contact.html
@@ -468,6 +468,64 @@ body {
         filter: invert(1); /* Invert the color of the logo */
     }
 }
+	 @media (max-width: 768px) {
+            .contact-us-header .header-content {
+                text-align: center;
+                padding: 20px;
+            }
+            .belowcard .row {
+                flex-direction: column;
+                padding-bottom: 20px;
+                /* Add padding at the bottom */
+            }
+            .belowcard .col-lg-8,
+            .belowcard .col-lg-4 {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+            .belowcard iframe {
+                height: auto;
+            }
+            .myaddress {
+                padding-top: 20px;
+                /* Add padding at the top */
+            }
+        }
+        
+        @media (max-width: 1024px) {
+            .contact-us-header .header-content {
+                text-align: center;
+                padding: 20px;
+            }
+            .belowcard .row {
+                flex-direction: column;
+                padding-bottom: 20px;
+                /* Add padding at the bottom */
+            }
+            .belowcard .col-lg-8,
+            .belowcard .col-lg-4 {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+            .belowcard iframe {
+                height: auto;
+            }
+            .myaddress {
+                padding-top: 10px;
+                /* Add padding at the top */
+            }
+            .myaddress .row {
+                flex-direction: column;
+            }
+            .myaddress .col-md-4,
+            .myaddress .col-md-8 {
+                max-width: 100%;
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
+        }
 
 </style>
 </head>
