--- a/powersystem.html
+++ b/powersystem.html
@@ -456,6 +456,47 @@
         filter: invert(1); /* Invert the color of the logo */
     }
 }
+	    @media (max-width: 768px) {
+            .card {
+                margin-left: auto;
+                margin-right: auto;
+                float: none;
+            }
+            .slide .content .icon {
+                margin: 0 auto;
+            }
+            .slide .content .icon img {
+                display: block;
+                margin: 0 auto;
+            }
+            .slide .content .icon h5 {
+                text-align: center;
+            }
+            .slide .content .card-body ul {
+                padding-left: 20px;
+            }
+        }
+        
+        @media (max-width: 1024px) {
+            .card {
+                margin-left: auto;
+                margin-right: auto;
+                float: none;
+            }
+            .slide .content .icon {
+                margin: 0 auto;
+            }
+            .slide .content .icon img {
+                display: block;
+                margin: 0 auto;
+            }
+            .slide .content .icon h5 {
+                text-align: center;
+            }
+            .slide .content .card-body ul {
+                padding-left: 20px;
+            }
+        }
     </style>
 </head>
 
