--- a/firesuppression.html
+++ b/firesuppression.html
@@ -471,7 +471,7 @@ body {
 											<li aria-haspopup="true"><a href="GMPQUALITYCONSULTING.html">GMP Quality Consulting</a></li>
 											<li aria-haspopup="true"><a href="hac.html">MLC HAC Services</a></li>
 											<li aria-haspopup="true"><a href="qualityrisk.html">Quality Consultation Services</a></li>
-											<li aria-haspopup="true"><a href="employeehs.html">MLC Employee Health Services</a></li>
+											<li aria-haspopup="true"><a href="employeehs.html">MLC Employee Health<br> Services</a></li>
 											<li aria-haspopup="true"><a href="gmp.html">GMP Audit</a></li>
 											
 										   </ul>
