--- a/Pharma.html
+++ b/Pharma.html
@@ -471,7 +471,7 @@ body {
 											<li aria-haspopup="true"><a href="industrialhygene.html">Industrial<br>hygene</a></li>
 											<li aria-haspopup="true"><a href="Pharma.html">Pharma Clean room equipments</a></li>
 											<li aria-haspopup="true"><a href="incidentinvestigation.html">Incident Investigation</a></li>
-											<li aria-haspopup="true"><a href="Esg.html">ESG End to End Solution </a></li>
+											<li aria-haspopup="true"><a href="Esg.html">ESG End to<br> End Solution </a></li>
 											<li aria-haspopup="true"><a href="british.html">British Safety Council Certification</a></li>
 											<li aria-haspopup="true"><a href="supplierqualificationaudit.html">Supplier qualification Audit</a></li>
 											<li aria-haspopup="true"><a href="RespiratoryEmergencyProtectionSystems.html">Respiratory & Emergency Protection Systems</a></li>
@@ -479,7 +479,7 @@ body {
 											<li aria-haspopup="true"><a href="GMPQUALITYCONSULTING.html">GMP Quality Consulting</a></li>
 											<li aria-haspopup="true"><a href="hac.html">MLC HAC Services</a></li>
 											<li aria-haspopup="true"><a href="qualityrisk.html">Quality Consultation Services</a></li>
-											<li aria-haspopup="true"><a href="employeehs.html">MLC Employee Health Services</a></li>
+											<li aria-haspopup="true"><a href="employeehs.html">MLC Employee Health<br> Services</a></li>
 											<li aria-haspopup="true"><a href="gmp.html">GMP Audit</a></li>
 											
 										   </ul>
