--- a/Esg.html
+++ b/Esg.html
@@ -598,6 +598,14 @@
 
 
 <br>
+		<!-- WhatsApp Icon -->
+<!-- WhatsApp Icon -->
+<div id="whatsapp-icon" class="whatsapp-icon">
+    <a href="https://api.whatsapp.com/send?phone=7726932023" target="_blank">
+<img src="images/vindus_clients_images/whate.png" alt="whatsapp"	>	
+ <span class="whatsapp-text">WhatsApp</span>
+    </a>
+</div>
 		<div id="scroll-to-top" onclick="scrollToTop()">
 	<i class="fa-solid fa-circle-up" style="font-size: 30px;"></i>
 </div>
