--- a/GMPQUALITYCONSULTING.html
+++ b/GMPQUALITYCONSULTING.html
@@ -712,7 +712,7 @@
                         </div>
                         <div class="col-md-12">
                             <div class="custom-card">
-                                <h3 class="orange-heading">ZENOVEL ADVANTAGES:</h3> <br>
+                                <h3 class="orange-heading">MLC ADVANTAGES:</h3> <br>
 
                                 <li> Highly Experience GMP Experts </li>
                                 <li>Thorough knowledge and Understating on Quality and Compliance System. </li>
