--- a/Esg.html
+++ b/Esg.html
@@ -171,11 +171,12 @@
 }
 
 .esg-section {
-      background: linear-gradient(135deg, #000040, #1560bd);
+	background-image: url('images/vindus_clients_images/nam.jpg');
       color: white;
       padding: 50px 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	  background-size: cover;
     }
     .esg-header {
       text-align: center;
