--- a/supplierqualificationaudit.html
+++ b/supplierqualificationaudit.html
@@ -321,13 +321,14 @@
         }
         
         .custom-card {
-            background-color: #f8f9fa;
+            background-color: white;
             /* Light gray background for cards */
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: box-shadow 0.3s ease;
+            border: 1px solid rgb(167, 162, 162);
         }
         
         .custom-card:hover {
