--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@ body {
 				<a href="certification.html" class="h-link">Certification<span class="wsarrow"></span></a>
 				<ul class="sub-menu">
 					<li aria-haspopup="true">
-						<a href="certification1.html">ISO <span class="wsarrow"></span></a>
+						<a href="certification.html">ISO <span class="wsarrow"></span></a>
 						<ul class="sub-menu">
 							<li aria-haspopup="true"><a href="certification1_1.html">ISO 45001:2018</a></li>
 							<li aria-haspopup="true"><a href="certification1_2.html">ISO 14001:2015</a></li>
