--- a/index.html
+++ b/index.html
@@ -890,10 +890,10 @@ body {
 					<li aria-haspopup="true">
 						<a href="certification.html">ISO <span class="wsarrow"></span></a>
 						<ul class="sub-menu">
-							<li aria-haspopup="true"><a href="certification1_1.html">ISO 45001:2018</a></li>
-							<li aria-haspopup="true"><a href="certification1_2.html">ISO 14001:2015</a></li>
-							<li aria-haspopup="true"><a href="certification1_3.html">ISO 9001:2015</a></li>
-							<li aria-haspopup="true"><a href="certification1_4.html">IMS</a></li>
+							<li aria-haspopup="true"><a href="certification1.html">ISO 45001:2018</a></li>
+							<li aria-haspopup="true"><a href="certification2.html">ISO 14001:2015</a></li>
+							<li aria-haspopup="true"><a href="certification3.html">ISO 9001:2015</a></li>
+							<li aria-haspopup="true"><a href="certification4.html">IMS</a></li>
 
 						</ul>
 					</li>
