--- a/Esg.html
+++ b/Esg.html
@@ -491,7 +491,7 @@
       <div class="col-md-6 offset-md-3">
         <div class="card esg-card">
           <div class="card-body">
-            <h5 class="card-title" style="color:white;">What is ESG?</h5>
+            <h5 class="card-title" >What is ESG?</h5>
             <p class="card-text">The ESG framework helps identify, organize, analyze, prioritize, and accordingly guide decisions on various business risks.</p>
           </div>
         </div>
