--- a/contact.html
+++ b/contact.html
@@ -808,7 +808,7 @@ body {
 
       <!-- Google Maps Column -->
       <div class="col-lg-4">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.9992188832694!2d78.54040247368862!3d17.363770603487986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb919407ab2c5b%3A0x5aa19ccada9edacf!2sAnutex%20Shopping%20Mall%20-%20Kothapet!5e0!3m2!1sen!2sin!4v1714128825187!5m2!1sen!2sin" width="100%" height="600px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.2886961165323!2d78.45121733286602!3d17.49372694687363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb906b02eeebdd%3A0xe8cd3e026d0afe6!2sManikya%20Nagar%2C%20Quthbullapur%2C%20Hyderabad%2C%20Telangana%20500055!5e0!3m2!1sen!2sin!4v1721302568122!5m2!1sen!2sin" width="100%" height="600px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
   </div>
 </div>
