--- a/contact.html
+++ b/contact.html
@@ -992,6 +992,7 @@ body {
 										<i class="fas fa-envelope"></i>  info@mlcqehs.com
 
 									</a>
+									<a href="mailto:contactmlconsultancy@gmail.com" style="color:#fff;">contactmlconsultancy@gmail.com</a>
 									<br><br>
 									<i class="fas fa-mobile-alt"></i> +91 9949845759<br>+91 7726932023
 								</p>
