--- a/contact.html
+++ b/contact.html
@@ -889,7 +889,7 @@ body {
         <strong>Reg.No.</strong>
        
        SEA/MED/ALO/QB/0902493/2024<br><br>
-       <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+       <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px" style="margin-left: 90px;">
 
        
       </address>
