--- a/fivestar1.html
+++ b/fivestar1.html
@@ -763,25 +763,36 @@
                     <h5 class="card-title">Why choose the British Safety Council</h5>
                 </div>
                 <div class="card-body">
-                    <p style="text-align: justify;">Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety and environmental management systems (and associated arrangements) are suitable for your business requirements, promote
-                        continual improvement and are effectively implemented.</p>
-                    <p><strong>As part of our own quality control processes, we ensure:</strong></p>
-                    <ul>
-                        <li>Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</li>
-                        <li>Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</li>
-                        <li>Our technical specialists serve on strategic committees for occupational health, safety and environmental standards</li>
-                        <li>We have a unique internationally recognized best practice (five star) audit process</li>
-                        <li>Industry recognition from awards such as the prestigious Sword or Globe of Honour</li>
+                    <p class="card-text">Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety and environmental management systems (and associated arrangements) are suitable for your business requirements,
+                        promote continual improvement and are effectively implemented.</p>
+                    <p class="card-text"><strong>As part of our own quality control processes, we ensure:</strong></p>
+                    <ul class="card-text">
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british1.jpg" alt="Image 1" class="img-fluid mr-3">
+                            <span class="mobile-text">Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british2.jpg" alt="Image 2" class="img-fluid mr-3">
+                            <span class="mobile-text">Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british3.jpg" alt="Image 3" class="img-fluid mr-3">
+                            <span class="mobile-text">Our technical specialists serve on strategic committees for occupational health, safety and environmental standards</span>
+                        </li>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british4.jpg" alt="Image 4" class="img-fluid mr-3">
+                            <span class="mobile-text">We have a unique internationally recognized best practice (five star) audit process</span>
+                        </li>
                     </ul>
-                    <div class="text-center" style="padding: 30px 0px;">
-                        <img src="images/vindus_clients_images/fivestar.jpg" class="img-fluid" alt="image">
+                    <div class="text d-flex flex-wrap">
+                        <img src="images/vindus_clients_images/british5.jpg" class="img-fluid mr-3 mb-2" alt="Image">
+                        <span class="mobile-text">Industry recognition from awards such as the prestigious Sword or Globe of Honour</span>
+
                     </div>
-                    <p>Industry recognition from awards such as the prestigious Sword or Globe of Honour.</p>
                 </div>
+            
             </div>
         </div>
-
-
 
 
 
