--- a/fivestar1.html
+++ b/fivestar1.html
@@ -784,7 +784,7 @@
                             <span class="mobile-text">We have a unique internationally recognized best practice (five star) audit process</span>
                         </li>
                     </ul>
-                    <div class="text d-flex flex-wrap">
+                    <div class="class="d-flex align-items-center mb-2 mobile-full-width"">
                         <img src="images/vindus_clients_images/british5.jpg" class="img-fluid mr-3 mb-2" alt="Image">
                         <span class="mobile-text">Industry recognition from awards such as the prestigious Sword or Globe of Honour</span>
 
