--- a/fivestar3.html
+++ b/fivestar3.html
@@ -779,34 +779,37 @@
             <!-- Why choose us? -->
             <div class="card mb-4">
                 <div class="card-header">
-                    <h2 class="card-title">
-                        Why choose us?
-
-                    </h2>
+                    <h5 class="card-title">Why choose us?</h5>
                 </div>
                 <div class="card-body">
-                    Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety, and environmental management systems (and associated arrangements) are suitable for your business requirements, promote continual improvement,
-                    and are effectively implemented. As part of our own quality control processes, we ensure:
-                    <ul style="list-style: square;">
-                        <li> <img src="images/vindus_clients_images/british1.jpg" alt="Image 5" class="list-image">
-                            <div> Our audit and consultancy products are regularly reviewed to meet customer needs, expectations, and sector best practice</div>
+                    <p class="card-text">Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety and environmental management systems (and associated arrangements) are suitable for your business requirements,
+                        promote continual improvement and are effectively implemented.</p>
+                    <p class="card-text"><strong>As part of our own quality control processes, we ensure:</strong></p>
+                    <ul class="card-text">
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british1.jpg" alt="Image 1" class="img-fluid mr-3">
+                            <span class="mobile-text">Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</span>
                         </li>
-                        <li> <img src="images/vindus_clients_images/british2.jpg" alt="Image 5" class="list-image">
-                            <div> Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training, and performance monitoring</div>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british2.jpg" alt="Image 2" class="img-fluid mr-3">
+                            <span class="mobile-text">Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</span>
                         </li>
-                        <li> <img src="images/vindus_clients_images/british3.jpg" alt="Image 5" class="list-image">
-                            <div> Our technical specialists serve on strategic committees for occupational health, safety, and environmental standards</div>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british3.jpg" alt="Image 3" class="img-fluid mr-3">
+                            <span class="mobile-text">Our technical specialists serve on strategic committees for occupational health, safety and environmental standards</span>
                         </li>
-                        <li> <img src="images/vindus_clients_images/british4.jpg" alt="Image 5" class="list-image">
-                            <div> We have a unique internationally recognized best practice (five star) audit process</div>
-                        </li>
-                        <li>
-                            <img src="images/vindus_clients_images/british5.jpg" alt="Image 5" class="list-image">
-
-                            <div> Industry recognition from awards such as the prestigious Sword or Globe of Honour</div>
+                        <li class="d-flex align-items-center mb-2 mobile-full-width">
+                            <img src="images/vindus_clients_images/british4.jpg" alt="Image 4" class="img-fluid mr-3">
+                            <span class="mobile-text">We have a unique internationally recognized best practice (five star) audit process</span>
                         </li>
                     </ul>
+                    <div class="d-flex align-items-center mb-2 mobile-full-width">
+                        <img src="images/vindus_clients_images/british5.jpg" class="img-fluid mr-3 mb-2" alt="Image">
+                        <span class="mobile-text">Industry recognition from awards such as the prestigious Sword or Globe of Honour</span>
+
+                    </div>
                 </div>
+            
             </div>
         </div>
 
