--- a/fivestar1.html
+++ b/fivestar1.html
@@ -760,7 +760,7 @@
             </div>
             <div class="card mb-4">
                 <div class="card-header">
-                    <h5 class="card-title">Why choose the British Safety Council</h5>
+                    <h5 class="card-title">Why choose us?</h5>
                 </div>
                 <div class="card-body">
                     <p class="card-text">Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety and environmental management systems (and associated arrangements) are suitable for your business requirements,
