--- a/fivestar6.html
+++ b/fivestar6.html
@@ -798,26 +798,41 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapsethree" aria-expanded="false" aria-controls="collapsethree">
-                    Why you should choose the British Safety Council               </button>
+                    <h2 class="accordion-header" id="headingEight">
+                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                  Why choose us?
+                </button>
                     </h2>
-                    <div id="collapsethree" class="accordion-collapse collapse" aria-labelledby="headingthree" data-parent="#accordionWellbeing">
+                    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-parent="#accordionWellbeing">
                         <div class="accordion-body">
-                            Our audit and consultancy services are internationally recognized and are the best way to ensure your health, safety and environmental management systems (and associated arrangements) are suitable for your business requirements, promote continual improvement
-                            and are effectively implemented.
+                            Our audit and consultancy services are internationally recognized and are the best way to ensure your wellbeing systems (and associated arrangements) are suitable for your business requirements, promote continual improvement and are effectively implemented.<br>
+                            <strong> As part of our own quality control processes, we ensure:</strong>
+
                             <ul>
-                                <li>• Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</li>
-                                <li>• Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</li>
-                                <li>• Our technical specialists serve on strategic committees for occupational health, safety and environmental standards</li>
-                                <li>• We have a unique internationally recognized best practice (five star) audit process</li>
-                                <li>• Industry recognition from awards such as the prestigious Sword or Globe of Honour</li>
+                                <li> <img src="images/vindus_clients_images/british1.jpg" alt="Image 5" class="list-image">
+                                    <div> Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british2.jpg" alt="Image 5" class="list-image">
+                                    <div>Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british3.jpg" alt="Image 5" class="list-image">
+                                    <div>Our technical specialists serve on strategic committees for occupational health, safety, environmental and wellbeing standards</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british4.jpg" alt="Image 5" class="list-image">
+                                    <div>We have a unique internationally recognized best practice (Five Star) audit process</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british5.jpg" alt="Image 5" class="list-image">
+                                    <div>Industry recognition from awards such as the prestigious Shield, Sword or Globe of Honour.</div>
+                                </li>
+
 
                             </ul>
+
 
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </div>
