--- a/fivestar7.html
+++ b/fivestar7.html
@@ -444,9 +444,7 @@
             color: rgb(3, 116, 214);
         }
         
-        ul {
-            list-style: square;
-        }
+      
 	    #services-menu{
 	height: 420px;
 	overflow-y: scroll;
@@ -796,8 +794,8 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingEight">
                         <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                    Why you should choose the British Safety Council
-                  </button>
+                  Why choose us?
+                </button>
                     </h2>
                     <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-parent="#accordionWellbeing">
                         <div class="accordion-body">
@@ -828,6 +826,7 @@
                         </div>
                     </div>
                 </div>
+
 
             </div>
         </div>
