--- a/fivestar8.html
+++ b/fivestar8.html
@@ -728,17 +728,36 @@
                 </div>
 
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapsenine" aria-expanded="false" aria-controls="collapsenine">
-                    Why choose us?
-                  </button>
+                    <h2 class="accordion-header" id="headingEight">
+                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                  Why choose us?
+                </button>
                     </h2>
-                    <div id="collapsenine" class="accordion-collapse collapse" aria-labelledby="headingnine" data-parent="#accordionWellbeing">
+                    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-parent="#accordionWellbeing">
                         <div class="accordion-body">
-                            Our dedicated and experienced team of auditors have been actively involved in the UK contribution towards ISO 45001 standard development. Our Head of Audit was a member of the UK national consultative body on ISO 45001 and was co-opted onto the BSI development
-                            panel of UK guidance on the new standard.<br><br>
-                            <strong style="color: #dc3545;">Assessment support services by MLC: -</strong> <br> Our assessment support service will help you to gain a better understanding of how well your health and safety management system is currently
-                            aligned to the requirements of ISO 45001. <br> The assessment and subsequent report will provide observations of any areas in which you may need to improve in preparation for achieving ISO 45001 certification.
+                            Our audit and consultancy services are internationally recognized and are the best way to ensure your wellbeing systems (and associated arrangements) are suitable for your business requirements, promote continual improvement and are effectively implemented.<br>
+                            <strong> As part of our own quality control processes, we ensure:</strong>
+
+                            <ul>
+                                <li> <img src="images/vindus_clients_images/british1.jpg" alt="Image 5" class="list-image">
+                                    <div> Our audit and consultancy products are regularly reviewed to meet customer needs, expectations and sector best practice</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british2.jpg" alt="Image 5" class="list-image">
+                                    <div>Consistently high standards of service are achieved through a robust quality assurance process including auditor standardization, training and performance monitoring</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british3.jpg" alt="Image 5" class="list-image">
+                                    <div>Our technical specialists serve on strategic committees for occupational health, safety, environmental and wellbeing standards</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british4.jpg" alt="Image 5" class="list-image">
+                                    <div>We have a unique internationally recognized best practice (Five Star) audit process</div>
+                                </li>
+                                <li> <img src="images/vindus_clients_images/british5.jpg" alt="Image 5" class="list-image">
+                                    <div>Industry recognition from awards such as the prestigious Shield, Sword or Globe of Honour.</div>
+                                </li>
+
+
+                            </ul>
+
 
                         </div>
                     </div>
