--- a/fivestar4.html
+++ b/fivestar4.html
@@ -660,7 +660,7 @@
         <div class="container my-4">
             <div class="card-header">
                 <div class="card-title">
-                    <h2 style="color: #f6f7f8;text-align: center;padding: 10px;"> Star Audits</h2>
+                    <h2 style="color: #f6f7f8;text-align: center;padding: 10px;">  Five Star Group Audit</h2>
                 </div>
             </div>
 
@@ -668,9 +668,7 @@
 
                 <!-- Section 1: Introduction -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne" style="color: rgb(2, 2, 107);padding: 10px 10px;" align="center">
-                        Five Star Group Audit
-                    </h2>
+                    
                     <div class="accordion-body">
                         Provides a quantified outcome with detailed recommendations against a contemporary best practice specification (including the requirements of ISO 45001) over and above current OHSMS standard requirements. Allows benchmarking of multi sites across business.
                     </div>
@@ -820,6 +818,7 @@
 
             </div>
         </div>
+
 
 
 
