--- a/fivestar3.html
+++ b/fivestar3.html
@@ -671,7 +671,7 @@
                     
                     <div class="accordion-body">
                         Our Five Star Safety, Health and Environmental (ISHE) Audit provides an integrated audit process, which combines all the features and primary components of the Five Star Occupational Health and Safety and Environmental Audit into one product.                </div>
-
+		</div>
                 <!-- Section 2: Who is the audit for? -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
